<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0E0E1A"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:contentDescription="@string/background"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/android_large___10__2_" />

    <ImageButton
        android:id="@+id/dado20"
        android:layout_width="71dp"
        android:layout_height="74dp"
        android:layout_marginTop="50dp"
        android:background="#00FFFFFF"
        android:contentDescription="@string/twentydice"
        android:scaleType="fitXY"
        android:scaleX="3"
        android:scaleY="3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dado12"
        app:srcCompat="@drawable/group_9" />

    <ImageButton
        android:id="@+id/dado6"
        android:layout_width="78dp"
        android:layout_height="79dp"
        android:layout_marginTop="50dp"
        android:background="#00FFFFFF"
        android:contentDescription="@string/sixdice"
        android:cropToPadding="false"
        android:padding="0dp"
        android:paddingHorizontal="-10dp"
        android:scaleType="fitXY"
        android:scaleX="3"
        android:scaleY="3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:srcCompat="@drawable/group_23" />

    <ImageButton
        android:id="@+id/dado12"
        android:layout_width="73dp"
        android:layout_height="73dp"
        android:layout_marginTop="50dp"
        android:background="#00FFFFFF"
        android:contentDescription="@string/twelvedice"
        android:scaleType="fitXY"
        android:scaleX="3"
        android:scaleY="3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dado6"
        app:srcCompat="@drawable/group_22__1_" />

    <ImageView
        android:id="@+id/imageView15"
        android:layout_width="197dp"
        android:layout_height="194dp"
        android:baselineAlignBottom="false"
        android:contentDescription="@string/logo"
        android:cropToPadding="false"
        android:scaleX="2"
        android:scaleY="2"
        app:layout_constraintBottom_toBottomOf="@+id/imageView8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/group_24" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/choseweapon"
        android:text="@string/chose_your_weapon"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView15" />

</androidx.constraintlayout.widget.ConstraintLayout>